src/style.css
/*Semantic UI*/

body {
    font-family: 'Poppins', sans-serif;
    margin: 0;
}

section {
    background-color:#faf8f8;
}

nav {
    display: flex;
    position: absolute;
    justify-content: space-between;
    margin-top: 25px;
    z-index: 99;
}

ul {
    display: flex;
    list-style-type: none;
    width: 500px;
    justify-content: space-around;
    font-size: 25px;
}

li {
    text-decoration: none;
}

h1 {
    font-size:60px;
    margin: 0;
}

h2 {
    font-size: 30px;
}

p {
    font-size: 22px;
    margin: 0;
    font-weight: 300;
}

a {
    text-decoration: none;
    color: white;
}

/*Hero Section*/

.logo {
    width: 90px;
    height: 90px;
    margin-top: 0px;
    margin-left: 50px;
}

.intro {
    font-size: 30px;
}

.socials {
    display: flex;
    position: absolute;
    align-self: flex-end;
    margin-left: 50px;
}

.social {
    margin: 10px;
}

.hero {
    height: 100vh;
    color: white;
    font-size: 30px;
}

#myVideo {
    position: absolute;
    right: 0;
    bottom: 0;
    min-width: 100%;
    min-height: 100%;
}

.hero-area {
    display: flex;
    position: absolute;
    justify-content: space-between;
    height: 100%;
    align-items: center;
}

.hero-text {
    margin-left: 50px;
    margin-bottom: 150px;
    margin-top: 150px;
}

.hamburger {
    display: none;
}

.hamburger:hover {
    outline: none;
    cursor: pointer;
}

.hamburger:focus {
    outline: 0;
}

@media only screen and (max-width: 1000px) {
    .hamburger {
        display: block;
        margin-left: 50px;
        margin-top: 25px;
        font-size: 30px;
        color: white;
        background-color: transparent;
        border: 0;
        align-self: flex-end;
        z-index: 1;
    }

    .hamburger:hover {
        outline: none;
        cursor: pointer;
    }

    ul {
        display: none;
        margin: 0px;

    }

    ul.show {
        display: flex;
        position: absolute;
        margin-left: 50px;
        flex-direction: column; 
    }

    nav {
        display: flex;
    }

    .logo {
        display: none;
}
}

/*Contact Button*/

.button {
    font-size: 20px;
    padding: 5px 15px;
    backface-visibility: hidden;
    position: relative;
    cursor: pointer;
    display: inline-block;
    white-space: nowrap;
    border-color: #7c7c7c;
    background: linear-gradient(180deg,#e6e6e6 0%,rgba(0, 0, 0, 0.25) 49%, rgba(38, 38, 38, 0.6) 51%,rgba(0, 0, 0, 0.25) 100%);
    border-radius: 5px;} 

.button:hover {
    font-size: 19px;
    backface-visibility: hidden;
    position: relative;
    cursor: pointer;
    display: inline-block;
    white-space: nowrap;
    border-color: #7c7c7c;
    background: linear-gradient(180deg,#e6e6e6 0%,rgba(0, 0, 0, 0.25) 49%, rgba(38, 38, 38, 0.6) 51%,rgba(0, 0, 0, 0.25) 100%);
    border-radius: 5px;
  }

.button:active {
    background-color: #f18118;
    box-shadow: 0 5px #666;
    transform: translateY(4px);
}

/*About Section*/

.sub-section {
    display: flex;
    justify-content: space-around;
    padding: 80px;
    padding-top: 200px;
    padding-bottom: 100px;
}

.subtext {
    font-size: 20px;
    font-weight: 300;
}

.skillset {
    width:350px;
    padding: 80px;
    padding-top: 25px;
}

.skillset-container {
    display: flex;
    align-items: center;
}

@media only screen and (max-width: 1000px) {
    .sub-section {
        display: flex;
        flex-wrap: wrap;
    }
}

/*Projects Section*/

.sub-section-alternative {
    display: flex;
    padding: 80px;
    flex-direction: column;
    text-align: center;
}

.project-card {
    width: 400px;
    height: 500px;
    border-color: #7c7c7c;
    background: linear-gradient(180deg,#e6e6e6 0%,rgba(0, 0, 0, 0.25) 49%, rgba(38, 38, 38, 0.6) 51%,rgba(0, 0, 0, 0.25) 100%);
    border-radius: 5px;
    color: white;
    margin: 20px;
    padding: 20px;
    border-radius: 10px;
    background-color: #01071f;
}

.project-container {
    display: flex;
    justify-content: space-around;
}

@media only screen and (max-width: 1000px) {
    .project-container {
        display: flex;
        flex-wrap: wrap;
    }
}

.project-image {
    width: 350px;
    height: 200px;
    border-radius: 10px;
}

.project-live-link {
    text-decoration: none;
    color: #a8a7a7;
}

.project-code-link {
    text-decoration: none;
    color: rgb(136, 135, 135);
}

.project-live-link:hover {
    color: #696968;
}

.project-code-link:hover {
    color: #999897;
}

/*Contact Section*/

footer {
    background-color: #01071f;
    color: white;
    text-align: center;
    padding: 80px;
}



/*Contact Form*/

@import url(https://fonts.googleapis.com/css?family=Montserrat:400,700);

body { background:rgb(30,30,40); }
form { max-width:420px; margin:50px auto; }

.feedback-input {
  color:white;
  font-family: Helvetica, Arial, sans-serif;
  font-weight:500;
  font-size: 18px;
  border-radius: 5px;
  line-height: 22px;
  background-color: transparent;
  border:2px solid #838282;
  transition: all 0.3s;
  padding: 13px;
  margin-bottom: 15px;
  width:100%;
  box-sizing: border-box;
  outline:0;
}

.feedback-input:focus { border:2px solid #bebec0; }

textarea {
  height: 150px;
  line-height: 150%;
  resize:vertical;
}

[type="submit"] {
  font-family: 'Montserrat', Arial, Helvetica, sans-serif;
  width: 100%;
  border-color: #7c7c7c;
  background: linear-gradient(180deg,#e6e6e6 0%,rgba(0, 0, 0, 0.25) 49%, rgba(38, 38, 38, 0.6) 51%,rgba(0, 0, 0, 0.25) 100%);
  border-radius:5px;
  border:0;
  cursor:pointer;
  color:white;
  font-size:24px;
  padding-top:10px;
  padding-bottom:10px;
  transition: all 0.3s;
  margin-top:-4px;
  font-weight:700;
}
[type="submit"]:hover { background: linear-gradient(180deg,#e6e6e6 0%,rgba(31, 31, 31, 0.25) 49%, rgba(51, 51, 51, 0.6) 51%,rgba(17, 17, 17, 0.25) 100%);
    ; }

/* Back to top button */

#myBtn {
    display: none;
    position: fixed;
    bottom: 20px;
    right: 30px;
    z-index: 99;
    border: none;
    outline: none;
    color: white;
    padding: 10px;
    border-radius: 10px;
    font-size: 30px;
    backface-visibility: hidden;
    cursor: pointer;
    display: inline-block;
    white-space: nowrap;
    border-color: #7c7c7c;
    background: linear-gradient(180deg,#e6e6e6 0%,rgba(0, 0, 0, 0.25) 49%, rgba(38, 38, 38, 0.6) 51%,rgba(0, 0, 0, 0.25) 100%);
    border-radius: 5px;
  }
  
  #myBtn:hover {
    font-size: 29px;
    background-color: #555; 
  }

